# ijcai26-cvrp-solver

./: .gitignore  README.md  data_augment.py  evaluate.py  generate_data_rf.py  gvrp_env_rf.py  routefinder_net_rf.py  train_mixed_rf.py  utils.py
cvrp_split_solver/: CMakeLists.txt  general_solver_rf.cpp
data/cvrp/test/: 50.npz
logs/debug-50/: cfg.json
